bump version number to 2.7.3 + fix compiler warnings #1066